# workers-rs

./: Cargo.toml  package-lock.json  package.json
examples/axum-test/: Cargo.toml  wrangler.toml
examples/axum-test/src/: lib.rs
worker/: Cargo.toml
worker-macros/src/: event.rs
worker-sys/: Cargo.toml
worker-sys/src/: cf.rs  headers.rs  websocket.rs
worker/src/: body.rs  cache.rs  cf.rs  cors.rs  durable.rs  fetch.rs  fetcher.rs  lib.rs  request.rs  response.rs  websocket.rs
worker/src/r2/: mod.rs
