[package]
name = "worker-sys"
authors = ["Cloudflare Workers Team <workers@cloudflare.com>"]
edition = "2018"
version = "0.0.6"
license = "Apache-2.0"
repository = "https://github.com/cloudflare/workers-rs/tree/main/worker-sys"
description = "Low-level extern definitions / FFI bindings to the Cloudflare Workers JS Runtime."

[dependencies]
cfg-if = "1.0.0"
js-sys = "0.3.57"
wasm-bindgen = "0.2.80"
http = "0.2.8"
wasm-streams = "0.2.3"
http-body = "0.4.5"
pin-project = "1.0.12"
bytes = "1.4.0"
futures-util = "0.3.26"

[dependencies.web-sys]
version = "0.3.60"
features = [
    "ReadableStream",
    "WritableStream",
    "RequestRedirect",
    "RequestInit",
    "FormData",
    "Blob",
    "BinaryType",
    "ErrorEvent",
    "MessageEvent",
    "CloseEvent",
    "ProgressEvent",
]

[features]
queue = []
