[package]
name = "axum-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = "s"

[features]
default = ["console_error_panic_hook"]

[dependencies]
axum = { version = "0.6.4", default-features = false, features = ["json"] }
worker = { path = "../../worker" }
http = "0.2.8"
tower = "0.4.13"
cfg-if = "0.1.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
serde_json = "1.0.93"
